[package]
name = "eternitywall-site"
version = "0.1.0"
edition = "2018"

[dependencies]
blocks_iterator = { version = "1.0.0", default-features = false }
env_logger = "0.9"
chrono = "0.4.19"
maud = "0.23"
structopt = "0.3.21" # cannot use re-exported cause I need macros

[dev-dependencies]
base64 = "0.13.0"
