[package]
name = "eternitywall-site"
version = "0.1.0"
edition = "2018"

[dependencies]
blocks_iterator = { version = "2.0.0", default-features = false }
env_logger = "0.9"
chrono = "0.4.19"
maud = "0.23"
log = "0.4.22"
clap = { version = "4.5.26", features = ["derive"] }

[dev-dependencies]
base64 = "0.13.0"
